--- a/arduan.html
+++ b/arduan.html
@@ -19,6 +19,8 @@
 <p>Иванов Виталий Иванович</p>
 Это простой текст.<br>
 Это другая строчка этого текста.
+<!--Это коментарий-->
+
 <a href="about.html">Информация о нас</a><br>
 Этот текст будет <q>Быть или не быть</q>
 
