--- a/about.html
+++ b/about.html
@@ -3,6 +3,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+        <style type="text/css">
+            body{background-color:#d2b48c;
+                margin-left: 20%;
+                margin-right: 20%;
+                border: 2px dotted gray;
+                padding:  10px 10px 10px 10px;
+                font-family: sans-serif;
+            }
+        </style>
     <title>О нас</title>
 </head>
 <body>
