Добавил элементы списка в Html

--- a/about.html
+++ b/about.html
@@ -16,6 +16,14 @@
 </head>
 <body>
 <h2>Информация о нас</h2>
+<ol>
+<li>Иванов Виталий Иванович</li>
+<li>Иванова Светлана Дмитриевна</li>
 <a href="arduan.html">Назад на главную страницу</a>
+</ol>
+<ul>
+    <li>Иванова Екатерина Витальевна</li>
+    <li>Гладкова Мария Витальевна </li>
+</ul>
 </body>
 </html>
