Добавил элемент title как атрибуть ссылки

--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
 <body>
 <h2>Информация о нас</h2>
 <ol>
-<li>Иванов Виталий Иванович</li>
-<li>Иванова Светлана Дмитриевна</li>
-<a href="arduan.html">Назад на главную страницу</a>
+    <li>Иванов Виталий Иванович</li>
+    <li>Иванова Светлана Дмитриевна</li>
+<a href="arduan.html" title="Вернуться на главную страницу сайта">Назад на главную страницу </a>
 </ol>
 <ul>
     <li>Иванова Екатерина Витальевна</li>
