Добавил ссылку в этой же странице

--- a/arduan.html
+++ b/arduan.html
@@ -24,9 +24,68 @@
 <a href="about.html">Информация о нас</a><br>
 Этот текст будет <q>Быть или не быть</q>
 
-<blockquote>Партия "Единая Россия" набрала 60,34% голосов избирателей на выборах депутатов Думы Ставрополья, сообщили итоговые данные журналистам во вторник в краевой избирательной комиссии</blockquote>
-
+<blockquote>Партия "Единая Россия" набрала 60,34% голосов избирателей на выборах депутатов Думы Ставрополья, сообщили
+    итоговые данные журналистам во вторник в краевой избирательной комиссии
+</blockquote>
+<h2><a id="chai">Здесь ссылка на <em>чай</em> на этой же странице</a></h2>
 <h3>Это заговловок </h3>
+<blockquote>
+    Научные специалисты из Орхусского университета в Дании и института эволюционной антропологии имени Макса Планка в
+    Германии определили возраст, в котором древние люди начинали заводить детей.
+    FBM.ru
+    Учёные выяснили, что представители Европы в среднем заводили детей в более молодом возрасте в сравнении с жителями
+    Америки и восточных районах Евразии.
+    FBM.ru
+    Семейные союзы в некоторых случаях заключались с ощутимым неравенством в возрасте между мужчинами и женщинами.
+    FBM.ru
+    В то же время в Европе возраст вступающих в отношения молодых женщин и мужчин был примерно одинаковымНаучные
+    специалисты из Орхусского университета в Дании и института эволюционной антропологии имени Макса Планка в Германии
+    определили возраст, в котором древние люди начинали заводить детей.
+    FBM.ru
+    Учёные выяснили, что представители Европы в среднем заводили детей в более молодом возрасте в сравнении с жителями
+    Америки и восточных районах Евразии.
+    FBM.ru
+    Семейные союзы в некоторых случаях заключались с ощутимым неравенством в возрасте между мужчинами и женщинами.
+    FBM.ru
+    В то же время в Европе возраст вступающих в отношения молодых женщин и мужчин был примерно одинаковымНаучные
+    специалисты из Орхусского университета в Дании и института эволюционной антропологии имени Макса Планка в Германии
+    определили возраст, в котором древние люди начинали заводить детей.
+    FBM.ru
+    Учёные выяснили, что представители Европы в среднем заводили детей в более молодом возрасте в сравнении с жителями
+    Америки и восточных районах Евразии.
+    FBM.ru
+    Семейные союзы в некоторых случаях заключались с ощутимым неравенством в возрасте между мужчинами и женщинами.
+    FBM.ru
+    В то же время в Европе возраст вступающих в отношения молодых женщин и мужчин был примерно одинаковымНаучные
+    специалисты из Орхусского университета в Дании и института эволюционной антропологии имени Макса Планка в Германии
+    определили возраст, в котором древние люди начинали заводить детей.
+    FBM.ru
+    Учёные выяснили, что представители Европы в среднем заводили детей в более молодом возрасте в сравнении с жителями
+    Америки и восточных районах Евразии.
+    FBM.ru
+    Семейные союзы в некоторых случаях заключались с ощутимым неравенством в возрасте между мужчинами и женщинами.
+    FBM.ru
+    В то же время в Европе возраст вступающих в отношения молодых женщин и мужчин был примерно одинаковымНаучные
+    специалисты из Орхусского университета в Дании и института эволюционной антропологии имени Макса Планка в Германии
+    определили возраст, в котором древние люди начинали заводить детей.
+    FBM.ru
+    Учёные выяснили, что представители Европы в среднем заводили детей в более молодом возрасте в сравнении с жителями
+    Америки и восточных районах Евразии.
+    FBM.ru
+    Семейные союзы в некоторых случаях заключались с ощутимым неравенством в возрасте между мужчинами и женщинами.
+    FBM.ru
+    В то же время в Европе возраст вступающих в отношения молодых женщин и мужчин был примерно одинаковымНаучные
+    специалисты из Орхусского университета в Дании и института эволюционной антропологии имени Макса Планка в Германии
+    определили возраст, в котором древние люди начинали заводить детей.
+    FBM.ru
+    Учёные выяснили, что представители Европы в среднем заводили детей в более молодом возрасте в сравнении с жителями
+    Америки и восточных районах Евразии.
+    FBM.ru
+    Семейные союзы в некоторых случаях заключались с ощутимым неравенством в возрасте между мужчинами и женщинами.
+    FBM.ru
+    В то же время в Европе возраст вступающих в отношения молодых женщин и мужчин был примерно одинаковым
+</blockquote>
+<h2><a href="arduan.html#chai"> Это заголовок о чае</a></h2>
 
 </body>
 </html>
