Открываем Яндекс в новом окне

--- a/about.html
+++ b/about.html
@@ -19,11 +19,12 @@
 <ol>
     <li>Иванов Виталий Иванович</li>
     <li>Иванова Светлана Дмитриевна</li>
-<a href="arduan.html" title="Вернуться на главную страницу сайта">Назад на главную страницу </a>
+    <a href="arduan.html" title="Вернуться на главную страницу сайта">Назад на главную страницу </a>
 </ol>
 <ul>
     <li>Иванова Екатерина Витальевна</li>
-    <li>Гладкова Мария Витальевна </li>
+    <li>Гладкова Мария Витальевна</li>
 </ul>
+<a target="_blank" href="https://yandex.ru/" Открываем страницу Яндекс>Открываем Яндекс в новом окне</a>
 </body>
 </html>
