--- a/arduan.html
+++ b/arduan.html
@@ -88,6 +88,6 @@
 <h2><a href="arduan.html#chai"> Это заголовок о чае</a></h2>
 
 <img src="https://assets.zyrosite.com/cdn-cgi/image/format=auto,w=612,h=576,fit=crop/YanW6R051DU1BypD/Nordsee-ALpVB4qK5NFqRbBE.jpg">
-
+<p>Параграф</p>
 </body>
 </html>
