Добавил новую страницу Андроид. Добавил ссылки.

--- a/arduan.html
+++ b/arduan.html
@@ -18,10 +18,11 @@
 <h1>Это заголовок</h1>
 <p>Иванов Виталий Иванович</p>
 Это простой текст.<br>
-Это другая строчка этого текста.
+Это другая строчка этого текста.<br>
 <!--Это коментарий-->
 
 <a href="about.html">Информация о нас</a><br>
+<a href="android.html">На страницу Андроид</a><br>
 Этот текст будет <q>Быть или не быть</q>
 
 <blockquote>Партия "Единая Россия" набрала 60,34% голосов избирателей на выборах депутатов Думы Ставрополья, сообщили
