Добавил файл стилей CSS

--- a/android.html
+++ b/android.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Androud</title>
-    <style type="text/css">
-        body {
-            background-color: aqua
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
+
 
 </head>
 <body>
