Изменяем стили оформления через индекс в CSS

--- a/arduan.html
+++ b/arduan.html
@@ -3,16 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Первый запуск</title>
-    <style type="text/css">
-        body{background-color:#d2b48c;
-        margin-left: 20%;
-        margin-right: 20%;
-        border: 2px dotted gray;
-        padding:  10px 10px 10px 10px;
-        font-family: sans-serif;
-        }
-
-    </style>
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <h1>Это заголовок</h1>
