--- a/lesson.html
+++ b/lesson.html
@@ -3,11 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>css</title>
-    <style type="text/css">
-        p {
-            background-color: aliceblue;
-            border: 2px solid brown;
-        }
+    <link rel="stylesheet" href="style.css">
+
+
     </style>
 </head>
 <body>
@@ -15,5 +13,7 @@
     Меня зовут Виталий<br>
 
 </p>
+<h3>Этот заголовок будет красным</h3>
+<h3 id="blue">А этот заголовок будет синим</h3>
 </body>
 </html>
