Изменяем стили оформления через класс в CSS

--- a/lesson.html
+++ b/lesson.html
@@ -15,5 +15,10 @@
 </p>
 <h3>Этот заголовок будет красным</h3>
 <h3 id="blue">А этот заголовок будет синим</h3>
+<h4 class="green">Этот заголовок будет классом</h4>
+
+<p class="green">Этот текст будет зеленым. Я его оформил через класс который определил в CSS</p>
+
+<h1 class="green2">Тоже заголовок оформленный через класс</h1>
 </body>
 </html>
