Использование классов в связке с div

--- a/example_div.html
+++ b/example_div.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Exemple_div</title>
+    <style>
+        .header {
+            background-color: lightgreen;
+            width: 70%;
+            height: 50%;
+        }
+
+        .text {
+            text-align: center;
+            font-size: 18pt;
+        }
+
+        .padding {
+            padding: 25px;
+        }
+    </style>
 </head>
 <body>
-<div style="color: red; background-color: #c3cbe1; border: blue 1px solid; margin: 20px; padding: 40px;">
+<div class="header text padding">
     <p>Алмазу Монах более миллирада лет.</p>
     <p>Это редкий зеленый алмаз.</p>
     <p>Его вес 300 карат, а цена превышает более 10 миллионов доларов.</p>
