Использование функций в  JS скрипте.

--- a/password.html
+++ b/password.html
@@ -7,12 +7,14 @@
 <body>
 <a href="example_div.html">Жми сюда</a>
 <script>
-    var name = 'svetlana';
-    if (name == 'svetlana') {
-        alert('Доступ разрешен');
-    } else {
-        alert('Доступ запрещен');
+
+    function sayPassword() {
+        alert('Пароль')
     }
+
+    sayPassword();
+
+
 </script>
 </body>
 </html>
