--- a/password.html
+++ b/password.html
@@ -6,15 +6,7 @@
 </head>
 <body>
 <a href="example_div.html">Жми сюда</a>
-<script>
 
-    function sayPassword() {
-        alert('Пароль')
-    }
-
-    sayPassword();
-
-
-</script>
+<p onclick="alert('Зеленый')">Какой цвет алмаза</p>
 </body>
 </html>
