--- a/password.html
+++ b/password.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Пароль</title>
+    <style>
+        body {
+            background-color: lightblue;
+            padding: 30px;
+        }
+    </style>
 </head>
 <body>
-<a href="example_div.html">Жми сюда</a>
+<p>Для входа на сайт введите пароль.</p>
+<p>Пароль: <input id="passwordBox" type="text"></p>
 
 <p onclick="alert('Зеленый')">Какой цвет алмаза</p>
 </body>
