Обработка пароля добавление скрипта проверки пароля.

--- a/password.html
+++ b/password.html
@@ -9,10 +9,25 @@
             padding: 30px;
         }
     </style>
+    <script>
+        function checkPassword() {
+            var password = document.getElementById("passwordBox");
+            var passwordText = password.value;
+            if (passwordText == "arduan") {
+                return true;
+            }
+            alert("Неверный пароль")
+            return false
+        }
+    </script>
 </head>
 <body>
 <p>Для входа на сайт введите пароль.</p>
-<p>Пароль: <input id="passwordBox" type="text"></p>
+<p>Пароль: <input id="passwordBox" type="password"></p>
+<a href="about.html" onclick="return checkPassword();">
+    Жми здесь
+</a>
+
 
 <p onclick="alert('Зеленый')">Какой цвет алмаза</p>
 </body>
