--- a/title.html
+++ b/title.html
@@ -19,5 +19,11 @@
 </head>
 <body>
 <h3 class="title">Hello World</h3>
+
+<img src="https://cdn.glitch.com/a9975ea6-8949-4bab-addb-8a95021dc2da%2Fillustration.svg?v=1618177344016"
+     class="illustration"
+     alt="Editor illustration"
+     title="Click the image!"
+/>
 </body>
 </html>
