--- a/button.html
+++ b/button.html
@@ -8,11 +8,16 @@
             background-color: pink;
         }
     </style>
+    <script>
+        function addItem() {
+            alert("Привет Виталий")
+        }
+    </script>
 </head>
 <body>
 
 <input type="text" value="Введите сюда"/>
-<input type="button" value="Добавить элемент"/>
+<input type="button" value="Добавить элемент" onclick="addItem()"/>
 
 </body>
 </html>
