Добавление элементов в приложение.Продолжение.

--- a/methods.html
+++ b/methods.html
@@ -10,6 +10,7 @@
     </script>
 </head>
 <body>
+<div id="list">Список задач</div>
 <input type="button" value="Добавить элемент" onclick="addItem();"/>
 <div id="contaimer"></div>
 </body>
